--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sweetalert2": "^11.4.14",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.18"
   },
