--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
     "axios": "^0.27.2",
+    "jose": "^4.8.1",
     "or": "^0.2.0",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
